# othello

./: CMakeLists.txt  README.md  contoller.c  controller.h  game.c  game.h  graphics.c  graphics.h  make.sh  othello.c  othello.h  resources.xml
resources/: README.md  help.txt  o1.glade  style.css
